[gd_scene load_steps=4 format=3 uid="uid://kmrtr5tgshgq"]

[ext_resource type="Script" path="res://Weapons/enemygun.gd" id="1_uc5r8"]
[ext_resource type="Texture2D" uid="uid://5aloko7xeqdb" path="res://Resources/Sprites/Weapons/gun spritesheet.png" id="2_66fdv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0idw"]
size = Vector2(60, 16)

[node name="EnemyGun" type="Area2D"]
position = Vector2(28, 0)
collision_layer = 0
collision_mask = 4
script = ExtResource("1_uc5r8")

[node name="Gun" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2(4, 4)
texture = ExtResource("2_66fdv")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_r0idw")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.021

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
